--- a/happy-birthday.html
+++ b/happy-birthday.html
@@ -4,80 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Happy Birthday!</title>
-  <style>
-    body {
-      background: linear-gradient(to right, #df9aff, #efcef8);
-      color: #fff;
-      text-align: center;
-      font-family: 'Comic Sans MS', cursive;
-      padding: 50px;
-    }
-
-    h1 {
-      font-size: 3em;
-      margin-bottom: 0.2em;
-    }
-
-    p {
-      font-size: 1.5em;
-      max-width: 700px;
-      margin: 0 auto 20px;
-    }
-
-    .gallery {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
-      margin: 30px 0;
-    }
-
-    .gallery img {
-      width: 180px;
-      height: 240px;
-      object-fit: cover;
-      border-radius: 15px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      transition: transform 0.3s ease;
-    }
-
-    .gallery img:hover {
-      transform: scale(1.05);
-    }
-
-    button {
-      background: #fff;
-      color: #df9aff;
-      padding: 15px 25px;
-      border: none;
-      font-size: 1.2em;
-      border-radius: 10px;
-      cursor: pointer;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-      transition: 0.3s;
-    }
-
-    button:hover {
-      background: #f3dbfa;
-    }
-
-    .hidden {
-      display: none;
-    }
-
-    .love-message {
-      margin-top: 20px;
-      font-size: 1.4em;
-      font-style: italic;
-      color: #fff;
-      animation: fadeIn 2s ease-in;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to   { opacity: 1; }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>🎉 Happy Birthday, ADERONKE! 🎂</h1>
